langgraph multi-agent setup diagram

--- a/notebooks/AgentSimple.ipynb
+++ b/notebooks/AgentSimple.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "id": "9bfdd437",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
     "    # Find the next unfinished task\n",
     "    for task in plan:\n",
     "        if not task.get(\"done\"):\n",
-    "            next_route = task[\"type\"]  # like \"sql_agent\" or \"vector_agent\"\n",
+    "            next_route = task[\"type\"]  # \"sql_agent\" or \"vector_agent\"\n",
     "            return next_route\n",
     "    \n",
     "    # If all tasks are done, go to summarizer\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "75ea3e0b",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
     "                        f\"[Tool: {call['name']}] Query: {call['args'].get('query','')} Result: {tool_msg.content.strip()}\"\n",
     "                    )\n",
     "\n",
-    "    # Optionally also include any non-tool results (from sql_results, vector_results, question_results)\n",
+    "    # Also include any non-tool results (from sql_results, vector_results, question_results)\n",
     "    sql_results = state.get(\"sql_results\") or []\n",
     "    vector_results = state.get(\"vector_results\") or []\n",
     "    question_results = state.get(\"question_results\") or []\n",
